545-mirroring/5451/gateway-api/http-route-reviews.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reviews-mirroring
spec:
  parentRefs:
    - group: ""
      kind: Service
      name: reviews
      port: 9080
  rules:
    - filters:
      - type: RequestMirror
        requestMirror:
          backendRef:
            name: reviews-v2
            port: 9080
      backendRefs:
        - name: reviews-v1
          port: 9080
